<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CAHPhone</string>
    <string name="hello_team">Hello team!</string>
    <string name="action_settings">Settings</string>


    <string name="phone_ui_topic">Topic:</string>
    <string name="question_card">Lorem Ipsum ________</string>
    <string name="answer_card">dolor sit amet.</string>
    <string name="your_cards">Your cards:</string>
    <string name="button_next">&gt;</string>
    <string name="button_last">&lt;</string>

</resources>
