<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:padding="8dp"
        android:text="@string/phone_ui_topic"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_phone_topic"
        android:background="@color/black"
        android:text="@string/question_card"
        android:textColor="@color/white"
        android:textSize="32sp"
        android:layout_margin="32dp"
        android:padding="32dp"/>


    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:padding="12dp"
        android:text="@string/your_cards"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/fragmentContainer"
        android:orientation="horizontal">
    </LinearLayout>

</LinearLayout>