<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_marginTop="32dp">
    <!--<android.support.v4.view.ViewPager-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:id="@+id/cardPager"/>-->
    <!--<include layout="@layout/phone_white_item"/>-->

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="32dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:id="@+id/previous"
        android:text="@string/button_last"/>

    <!--<include layout="@layout/phone_white_item"/>-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/previous"
        android:id="@+id/tv_phone_topic"

        android:text="@string/answer_card"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:layout_margin="2dp"
        android:padding="16dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginTop="32dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:id="@+id/next"
        android:text="@string/button_next"/>



</LinearLayout>
